--- a/TP5_fiasco/Nouveau dossier/style.css
+++ b/TP5_fiasco/Nouveau dossier/style.css
@@ -20,3 +20,38 @@ vertical-align: baseline;
     box-sizing: border-box;
 
 }
+/*************** HEADER ***************/
+
+/*************** FIN HEADER ***************/
+
+/*************** NAV ***************/
+
+/*************** FIN NAV ***************
+
+/*************** MAIN ***************/
+
+/*************** FIN MAIN ***************/
+
+/*************** ASIDE LEFT ***************/
+
+/*************** FIN ASIDE LEFT***************/
+
+/*************** SECTION 1 ***************/
+
+/*************** FIN SECTION 1 ***************/
+
+/*************** SECTION 2 ***************/
+
+/*************** FIN SECTION 2 ***************/
+
+/*************** SECTION 3 ***************/
+
+/*************** FIN SECTION 3 ***************/
+
+/*************** ASIDE RIGHT ***************/
+
+/*************** FIN ASIDE RIGHT ***************/
+
+/*************** FOOTER ***************/
+
+/*************** FIN FOOTER ***************/
