--- a/TP6_consignes/css/style.css
+++ b/TP6_consignes/css/style.css
@@ -1,3 +1,26 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+margin: 0;
+padding: 0;
+border: 0;
+vertical-align: baseline;
+}
+*{
+    box-sizing: border-box;
+
+}
+
 header {
     background-image: url(../consignes/img/dinosaure.jpg);
     width: 100%;
@@ -6,10 +29,42 @@ header {
     background-size: cover;
 }
 
+@font-face {
+    font-family: semibold;
+    src: url(../font/WorkSans-SemiBold.ttf);
+}
 
+/* Primeira Div  */
+ul {
+    opacity: 0.5;
+    background: black;
+    display: flex;
+    justify-content:space-around;
+    padding: 25px;
+}
+a {
+    text-decoration: none;
+    color: #ffff;
+   
+}/*  fim da primeira div */
+/* primeiro logo */
+.dino {
+    width: 40%;
+    margin: auto;
+}
+/* Final do primeiro logo */
 
+/* Primeiro Container */
+.container {
+    width: 40%;
+        margin: auto;
+}
+.lott {
+   font-size: 52px;
+   font-family: semibold;
+}
 
-
+/* Fim do primeiro container */
 
 
 
